--- a/src/components/Login.module.scss
+++ b/src/components/Login.module.scss
@@ -1,10 +1,11 @@
 .mask {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  // width: 100vw;
+  // height: 100vh;
+  inset: 0;
   z-index: 1000;
-  top: 0;
-  left: 0;
+  // top: 0;
+  // left: 0;
   background-color: rgb(0 0 0/30%);
 
   main {
